--- a/FSU_RAG_Search.ipynb
+++ b/FSU_RAG_Search.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "d511cde2-c45e-494d-8237-d7612f9a1cb0",
    "metadata": {
     "jupyter": {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6e4a5f77-279a-467e-baf6-e6235cc55eef",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4dc18167-e6de-44fc-9bf2-36bcada3d4e3",
    "metadata": {
     "tags": []
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0972c593-8de3-4c31-b9cd-1bef6f1d9fe3",
    "metadata": {
     "tags": []
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "19bb7089-6731-4d31-a5a1-cef32f1628e6",
    "metadata": {
     "tags": []
@@ -182,25 +182,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "839a8622-8851-4b93-b876-61957976f844",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import ScrapingUtils as SU"
+    "import Scraper.Spider"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "52f54caf-8300-4381-a923-7ffb444e7f70",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b51da160221d41489e5bedcbe17c8263",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/1.12k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb4b1dd7ff9a403eb2f016141317c4d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "pytorch_model.bin:   0%|          | 0.00/539M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "argument 'ids': 'dict' object cannot be converted to 'Sequence'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 39\u001b[0m\n\u001b[0;32m     36\u001b[0m answer_end_index \u001b[38;5;241m=\u001b[39m outputs\u001b[38;5;241m.\u001b[39mend_logits\u001b[38;5;241m.\u001b[39margmax()\n\u001b[0;32m     38\u001b[0m predict_answer_tokens \u001b[38;5;241m=\u001b[39m encoding\u001b[38;5;241m.\u001b[39minput_ids[\u001b[38;5;241m0\u001b[39m, answer_start_index : answer_end_index \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m---> 39\u001b[0m processor\u001b[38;5;241m.\u001b[39mdecode(encoding, skip_special_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\fsu_vector_search_env\\Lib\\site-packages\\transformers\\models\\markuplm\\processing_markuplm.py:141\u001b[0m, in \u001b[0;36mMarkupLMProcessor.decode\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m    137\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    138\u001b[0m \u001b[38;5;124;03m    This method forwards all its arguments to TrOCRTokenizer's [`~PreTrainedTokenizer.decode`]. Please refer to the\u001b[39;00m\n\u001b[0;32m    139\u001b[0m \u001b[38;5;124;03m    docstring of this method for more information.\u001b[39;00m\n\u001b[0;32m    140\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 141\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtokenizer\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\fsu_vector_search_env\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:3825\u001b[0m, in \u001b[0;36mPreTrainedTokenizerBase.decode\u001b[1;34m(self, token_ids, skip_special_tokens, clean_up_tokenization_spaces, **kwargs)\u001b[0m\n\u001b[0;32m   3822\u001b[0m \u001b[38;5;66;03m# Convert inputs to python lists\u001b[39;00m\n\u001b[0;32m   3823\u001b[0m token_ids \u001b[38;5;241m=\u001b[39m to_py_obj(token_ids)\n\u001b[1;32m-> 3825\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_decode(\n\u001b[0;32m   3826\u001b[0m     token_ids\u001b[38;5;241m=\u001b[39mtoken_ids,\n\u001b[0;32m   3827\u001b[0m     skip_special_tokens\u001b[38;5;241m=\u001b[39mskip_special_tokens,\n\u001b[0;32m   3828\u001b[0m     clean_up_tokenization_spaces\u001b[38;5;241m=\u001b[39mclean_up_tokenization_spaces,\n\u001b[0;32m   3829\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs,\n\u001b[0;32m   3830\u001b[0m )\n",
+      "File \u001b[1;32m~\\miniconda3\\envs\\fsu_vector_search_env\\Lib\\site-packages\\transformers\\tokenization_utils_fast.py:625\u001b[0m, in \u001b[0;36mPreTrainedTokenizerFast._decode\u001b[1;34m(self, token_ids, skip_special_tokens, clean_up_tokenization_spaces, **kwargs)\u001b[0m\n\u001b[0;32m    623\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(token_ids, \u001b[38;5;28mint\u001b[39m):\n\u001b[0;32m    624\u001b[0m     token_ids \u001b[38;5;241m=\u001b[39m [token_ids]\n\u001b[1;32m--> 625\u001b[0m text \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_tokenizer\u001b[38;5;241m.\u001b[39mdecode(token_ids, skip_special_tokens\u001b[38;5;241m=\u001b[39mskip_special_tokens)\n\u001b[0;32m    627\u001b[0m clean_up_tokenization_spaces \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    628\u001b[0m     clean_up_tokenization_spaces\n\u001b[0;32m    629\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m clean_up_tokenization_spaces \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    630\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclean_up_tokenization_spaces\n\u001b[0;32m    631\u001b[0m )\n\u001b[0;32m    632\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m clean_up_tokenization_spaces:\n",
+      "\u001b[1;31mTypeError\u001b[0m: argument 'ids': 'dict' object cannot be converted to 'Sequence'"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import MarkupLMFeatureExtractor, MarkupLMTokenizerFast, MarkupLMProcessor, MarkupLMForQuestionAnswering\n",
+    "import torch\n",
+    "\n",
+    "processor = MarkupLMProcessor.from_pretrained(\"microsoft/markuplm-base\")\n",
+    "# feature_extractor = MarkupLMFeatureExtractor()\n",
+    "# tokenizer = MarkupLMTokenizerFast.from_pretrained(\"microsoft/markuplm-base\")\n",
+    "model = MarkupLMForQuestionAnswering.from_pretrained(\"microsoft/markuplm-base-finetuned-websrc\")\n",
+    "\n",
+    "\n",
+    "html_string = \"\"\"\n",
+    " <!DOCTYPE html>\n",
+    " <html>\n",
+    " <head>\n",
+    " <title>Hello world</title>\n",
+    " </head>\n",
+    " <body>\n",
+    " <h1>Welcome</h1>\n",
+    " <p>Here is my website.</p>\n",
+    " </body>\n",
+    " </html>\"\"\"\n",
+    "\n",
+    "# note that you can also add provide all tokenizer parameters here such as padding, truncation\n",
+    "encoding = processor(html_string, return_tensors=\"pt\")\n",
+    "# print(encoding.keys())\n",
+    "# for key,value in encoding.items():\n",
+    "#     print(f\"{key}, {value}\")\n",
+    "    \n",
+    "\n",
+    "\n",
+    "# we use torch.no_grad() as we don't need any gradient computation here\n",
+    "# we're just doing inference! This saves memory\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**encoding)\n",
+    "\n",
+    "answer_start_index = outputs.start_logits.argmax()\n",
+    "answer_end_index = outputs.end_logits.argmax()\n",
+    "\n",
+    "predict_answer_tokens = encoding.input_ids[0, answer_start_index : answer_end_index + 1]\n",
+    "processor.decode(encoding, skip_special_tokens=True)"
+   ]
   },
   {
    "cell_type": "markdown",
