Created spider that uses js markdown

--- a/FSU_RAG_Search.ipynb
+++ b/FSU_RAG_Search.ipynb
@@ -182,14 +182,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "839a8622-8851-4b93-b876-61957976f844",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Spider'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mSpiders\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mGFMDSpider\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GFMDSpider\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(GFMDSpider)\n",
+      "File \u001b[1;32m~\\Documents\\FSU\\OneDrive - Florida State University\\Dx AI Internship\\Spiders\\GFMDSpider.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01murllib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mparse\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m urlparse\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mSpider\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Spider\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mGFMDSpider\u001b[39;00m(Spider):\n\u001b[0;32m      6\u001b[0m     name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGFMDSpider\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Spider'"
+     ]
+    }
+   ],
    "source": [
-    "import Scraper.Spider"
+    "from Spiders.GFMDSpider import GFMDSpider\n",
+    "print(GFMDSpider)"
    ]
   },
   {
@@ -243,47 +257,7 @@
      ]
     }
    ],
-   "source": [
-    "from transformers import MarkupLMFeatureExtractor, MarkupLMTokenizerFast, MarkupLMProcessor, MarkupLMForQuestionAnswering\n",
-    "import torch\n",
-    "\n",
-    "processor = MarkupLMProcessor.from_pretrained(\"microsoft/markuplm-base\")\n",
-    "# feature_extractor = MarkupLMFeatureExtractor()\n",
-    "# tokenizer = MarkupLMTokenizerFast.from_pretrained(\"microsoft/markuplm-base\")\n",
-    "model = MarkupLMForQuestionAnswering.from_pretrained(\"microsoft/markuplm-base-finetuned-websrc\")\n",
-    "\n",
-    "\n",
-    "html_string = \"\"\"\n",
-    " <!DOCTYPE html>\n",
-    " <html>\n",
-    " <head>\n",
-    " <title>Hello world</title>\n",
-    " </head>\n",
-    " <body>\n",
-    " <h1>Welcome</h1>\n",
-    " <p>Here is my website.</p>\n",
-    " </body>\n",
-    " </html>\"\"\"\n",
-    "\n",
-    "# note that you can also add provide all tokenizer parameters here such as padding, truncation\n",
-    "encoding = processor(html_string, return_tensors=\"pt\")\n",
-    "# print(encoding.keys())\n",
-    "# for key,value in encoding.items():\n",
-    "#     print(f\"{key}, {value}\")\n",
-    "    \n",
-    "\n",
-    "\n",
-    "# we use torch.no_grad() as we don't need any gradient computation here\n",
-    "# we're just doing inference! This saves memory\n",
-    "with torch.no_grad():\n",
-    "    outputs = model(**encoding)\n",
-    "\n",
-    "answer_start_index = outputs.start_logits.argmax()\n",
-    "answer_end_index = outputs.end_logits.argmax()\n",
-    "\n",
-    "predict_answer_tokens = encoding.input_ids[0, answer_start_index : answer_end_index + 1]\n",
-    "processor.decode(encoding, skip_special_tokens=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
