Remove unnecessary imports and commented code

--- a/FSU_RAG_Search.ipynb
+++ b/FSU_RAG_Search.ipynb
@@ -74,11 +74,10 @@
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.prompts.prompt import PromptTemplate\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
-    "from typing import Tuple, List, Optional\n",
+    "from typing import Tuple, List\n",
     "from langchain_core.messages import AIMessage, HumanMessage\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_community.graphs import Neo4jGraph\n",
-    "from langchain.document_loaders import WikipediaLoader\n",
     "from langchain.text_splitter import TokenTextSplitter\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_experimental.graph_transformers import LLMGraphTransformer\n",
@@ -87,7 +86,7 @@
     "from langchain_community.vectorstores import Neo4jVector\n",
     "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain_community.vectorstores.neo4j_vector import remove_lucene_chars\n",
-    "from langchain_core.runnables import ConfigurableField, RunnableParallel, RunnablePassthrough\n",
+    "from langchain_core.runnables import RunnableParallel, RunnablePassthrough\n",
     "\n",
     "\n",
     "# Warning control\n",
@@ -149,36 +148,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59deb430-b5c6-4257-8ba5-3dd41ec19be2",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "test it out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "19bb7089-6731-4d31-a5a1-cef32f1628e6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<langchain_community.graphs.neo4j_graph.Neo4jGraph object at 0x0000021700A7BF80>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(kg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bf45bc2c-ff89-4dd9-8d47-e95d61618a1a",
    "metadata": {
     "tags": []
@@ -196,16 +165,21 @@
    },
    "outputs": [],
    "source": [
-    "import json\n",
-    "datafile = \"GFMDSpider_output.json\"\n",
-    "try:\n",
-    "    with open(datafile) as f:\n",
-    "        data = json.load(f)\n",
-    "except:\n",
-    "    raise\n",
-    "# from Spiders.GFMDSpider import GFMDSpider\n",
-    "# fsu_edu_spider = GFMDSpider(\"https://www.fsu.edu/\")\n",
-    "# data = fsu_edu_spider.run()\n",
+    "NEW_RUN = False #setting this to true will overrite any previously made datafile and will take about 5 minutes.\n",
+    "\n",
+    "# already done so importing json file instead\n",
+    "if not NEW_RUN:\n",
+    "    import json\n",
+    "    datafile = \"GFMDSpider_output.json\"\n",
+    "    try:\n",
+    "        with open(datafile) as f:\n",
+    "            data = json.load(f)\n",
+    "    except:\n",
+    "        raise\n",
+    "else:\n",
+    "    from Spiders.HTMLtoMarkdownSpider import HTMLtoMarkdownSpider\n",
+    "    fsu_edu_spider = HTMLtoMarkdownSpider(\"https://www.fsu.edu/\")\n",
+    "    data = fsu_edu_spider.run()\n",
     "\n"
    ]
   },
