--- a/FSU_RAG_Search.ipynb
+++ b/FSU_RAG_Search.ipynb
@@ -40,19 +40,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d511cde2-c45e-494d-8237-d7612f9a1cb0",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "source": [
-    "%pip install --upgrade --quiet  langchain langchain-community langchain-openai langchain-experimental neo4j wikipedia tiktoken yfiles_jupyter_graphs pandas"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "6e4a5f77-279a-467e-baf6-e6235cc55eef",
@@ -165,12 +152,13 @@
    },
    "outputs": [],
    "source": [
-    "NEW_RUN = False #setting this to true will overrite any previously made datafile and will take about 5 minutes.\n",
-    "\n",
+    "#setting this to true will overrite any previously made datafile and will take\n",
+    "# about 5 minutes. Only do so if you want to rerun the spider\n",
+    "NEW_RUN = False\n",
     "# already done so importing json file instead\n",
     "if not NEW_RUN:\n",
     "    import json\n",
-    "    datafile = \"GFMDSpider_output.json\"\n",
+    "    datafile = \"HTMLtoMarkdownSpider_output.json\"\n",
     "    try:\n",
     "        with open(datafile) as f:\n",
     "            data = json.load(f)\n",
